Fix extension popup overflow hidden.

--- a/web/src/components/Popup/Popup.css
+++ b/web/src/components/Popup/Popup.css
@@ -33,6 +33,11 @@ html, body {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
+html::-webkit-scrollbar {
+    overflow: hidden;
+    width: 0px;
+}
+
 #logo {
     padding: 9px 0px 9px 16px;
 }
